Remove workaround for orthographic lookAt bug

The workaround causes a regression in shadow rendering. Instead of using
lookAt, just set the position and rotation values for directional lights
manually.

Fixes: QTBUG-100572
Pick-to: 6.3
Change-Id: I5f9a3d9dc531a01b9bb9bc5cfb6e346751b230bc
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
Reviewed-by: Christian Strømme <christian.stromme@qt.io>